--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,900;1,300&display=swap" rel="stylesheet">
     <title>Landing Page</title>
   </head>
   <body>
     <header class="header">
       <nav class="main-nav">
         <ul>
-          <li>Header Logo</li>
-          <li>Header link one</li>
-          <li>Header link two</li>
-          <li>Header link three</li>
+          <li class="logo"><a href="#">Header Logo</a></li>
+          <li><a href="#">Header link one</a></li>
+          <li><a href="#">Header link two</a></li>
+          <li><a href="#">Header link three</a></li>
         </ul>
       </nav>
-      <div class="hero-secion">
+      <div class="hero-section">
         <div class="hero-text">
           <h1>This Website is Awesome</h1>
           <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
