Complete header style

--- a/index.html
+++ b/index.html
@@ -11,22 +11,24 @@
   </head>
   <body>
     <header class="header">
-      <nav class="main-nav">
-        <ul>
-          <li class="logo"><a href="#">Header Logo</a></li>
-          <li><a href="#">Header link one</a></li>
-          <li><a href="#">Header link two</a></li>
-          <li><a href="#">Header link three</a></li>
-        </ul>
-      </nav>
-      <div class="hero-section">
-        <div class="hero-text">
-          <h1>This Website is Awesome</h1>
-          <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-          <button type="button">Sign Up</button>
-        </div>
-        <div class="hero-image">
-          <img src="#" alt="#">
+      <div class="header-wrapper">
+        <nav class="main-nav">
+          <ul>
+            <li class="logo"><a href="#">Header Logo</a></li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+          </ul>
+        </nav>
+        <div class="hero">
+          <div class="hero-text">
+            <h1>This Website is Awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button type="button" class="hero-button" href="#">Sign Up</button>
+          </div>
+          <div class="hero-image">
+            <img src="https://placeimg.com/590/280/animals" alt="animal photo">
+          </div>
         </div>
       </div>
     </header>
@@ -34,19 +36,19 @@
       <h1>Some more information</h1>
       <div>
         <dvi>
-          <img src="#" alt="#">
+          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
           <p>This is some subtext under an illustration or an image</p>
         </dvi>
         <dvi>
-          <img src="#" alt="#">
+          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
           <p>This is some subtext under an illustration or an image</p>
         </dvi>
         <dvi>
-          <img src="#" alt="#">
+          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
           <p>This is some subtext under an illustration or an image</p>
         </dvi>
         <dvi>
-          <img src="#" alt="#">
+          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
           <p>This is some subtext under an illustration or an image</p>
         </dvi>
       </div>
