Complete main content styles

--- a/index.html
+++ b/index.html
@@ -32,27 +32,29 @@
         </div>
       </div>
     </header>
-    <div class="main-content">
-      <h1>Some more information</h1>
-      <div>
-        <dvi>
-          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
-          <p>This is some subtext under an illustration or an image</p>
-        </dvi>
-        <dvi>
-          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
-          <p>This is some subtext under an illustration or an image</p>
-        </dvi>
-        <dvi>
-          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
-          <p>This is some subtext under an illustration or an image</p>
-        </dvi>
-        <dvi>
-          <img src="https://placeimg.com/210/210/animals" alt="animal photo">
-          <p>This is some subtext under an illustration or an image</p>
-        </dvi>
+    <main class="main-wrapper">
+      <div class="main-content">
+        <h2>Some random information.</h2>
+        <div class="main-gallery">
+          <div class="images">
+            <img src="https://placeimg.com/210/210/animals" alt="animal photo">
+            <p>This is some subtext under an illustration or an image</p>
+          </div>
+          <div class="images">
+            <img src="https://placeimg.com/210/210/arch" alt="architecture photo">
+            <p>This is some subtext under an illustration or an image</p>
+          </div>
+          <div class="images">
+            <img src="https://placeimg.com/210/210/nature" alt="nature photo">
+            <p>This is some subtext under an illustration or an image</p>
+          </div>
+          <div class="images">
+            <img src="https://placeimg.com/210/210/tech" alt="tech photo">
+            <p>This is some subtext under an illustration or an image</p>
+          </div>
+        </div>
       </div>
-    </div>
+    </main>
     <div class="big-quote">
       <figure>
         <blockquote>
