Complete quote styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-wrapper">
         <nav class="main-nav">
           <ul>
             <li class="logo"><a href="#">Header Logo</a></li>
@@ -30,9 +29,8 @@
             <img src="https://placeimg.com/590/280/animals" alt="animal photo">
           </div>
         </div>
-      </div>
     </header>
-    <main class="main-wrapper">
+    <main>
       <div class="main-content">
         <h2>Some random information.</h2>
         <div class="main-gallery">
@@ -55,13 +53,9 @@
         </div>
       </div>
     </main>
-    <div class="big-quote">
-      <figure>
-        <blockquote>
-          <p><cite>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it, who know? All I know is that it looks nice.</cite></p>
-        </blockquote>
-        <figcaption>- Thor, God of Thunder</figcaption>
-      </figure>
+    <div class="quote-wrapper">
+      <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it, who know? All I know is that it looks nice.</p>
+      <p class="figcaption">- Thor, God of Thunder</p>
     </div>
     <div class="cta-container">
       <div class="cta-box">
