--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="hero-text">
             <h1>This Website is Awesome</h1>
             <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-            <button type="button" class="hero-button" href="#">Sign Up</button>
+            <button type="button" class="button" href="#">Sign Up</button>
           </div>
           <div class="hero-image">
             <img src="https://placeimg.com/590/280/animals" alt="animal photo">
@@ -60,10 +60,10 @@
     <div class="cta-container">
       <div class="cta-box">
         <div class="cta-info">
-          <p><strong>Call to action! It's time!</strong></p>
+          <h3>Call to action! It's time!</h3>
           <p>Sign up for our product by clicking that button rigth over there!</p>
         </div>
-        <button type="button">Sign Up</button>
+        <button type="button" class="button footer-button">Sign Up</button>
       </div>
     </div>
     <footer>
