--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </main>
     <div class="quote-wrapper">
       <div class="vw-wrapper flex column">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it, who know? All I know is that it looks nice.</p>
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space or maybe people will actually read it, who knows? All I know is that it looks nice.</p>
         <p class="figcaption">- Thor, God of Thunder</p>
       </div>
     </div>
@@ -65,7 +65,7 @@
       <div class="cta-box flex">
         <div class="cta-info">
           <h3>Call to action! It's time!</h3>
-          <p>Sign up for our product by clicking that button rigth over there!</p>
+          <p>Sign up for our product by clicking that button right over there!</p>
         </div>
         <button type="button" class="button footer-button">Sign Up</button>
       </div>
